@@ -3,11 +3,11 @@
  *
  * v1.0 originally written by Gregory Demar
  *
- * @copyright  Copyright (c) 2003-2018 Coppermine Dev Team
+ * @copyright  Copyright (c) 2003-2019 Coppermine Dev Team
  * @license    GNU General Public License version 3 or later; see LICENSE
  *
  * js/admin.js
- * @since  1.6.06
+ * @since  1.6.07
  */
 
 function resetToDefault(theFieldId, fieldType, numberOfItems) 
@@ -94,6 +94,8 @@ function thumbMethodUI (elm)
 
 
 function adminPageLoaded(){
+
+	$("#cpgform input").on("invalid", function() { $(this).parents('.detail_body').show(); });
 
 	$('a.direct_config_link').click(function(){
 
